--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,9 @@
-name: A workflow for my Hello World file
-on: push
+jobs:
+  build:
+    name: Hello world action
+    tuns-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: ./action-a
+      with:
+      MY_NAME: "Mona"
