--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 jobs:
   build:
     name: Hello world action
-    tuns-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: ./action-a
-      with:
-      MY_NAME: "Mona"
+      - uses: actions/checkout@v1
+      - uses: ./action-a
+        with:
+          MY_NAME: "Mona"
